--- a/apps/permissions/locale/pt/LC_MESSAGES/django.po
+++ b/apps/permissions/locale/pt/LC_MESSAGES/django.po
@@ -3,17 +3,17 @@
 # This file is distributed under the same license as the PACKAGE package.
 #
 # Translators:
-# Roberto Rosario <roberto.rosario.gonzalez@gmail.com>, 2011, 2012.
+#   <dev.emerson@gmail.com>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: Mayan EDMS\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-02-12 15:20-0400\n"
-"PO-Revision-Date: 2012-02-12 00:25+0000\n"
+"PO-Revision-Date: 2012-02-02 18:18+0000\n"
 "Last-Translator: Roberto Rosario <roberto.rosario.gonzalez@gmail.com>\n"
-"Language-Team: Spanish (Castilian) (http://www.transifex.net/projects/p/"
-"mayan-edms/team/es/)\n"
-"Language: es\n"
+"Language-Team: Portuguese (http://www.transifex.net/projects/p/mayan-edms/"
+"team/pt/)\n"
+"Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -21,11 +21,11 @@ msgstr ""
 
 #: __init__.py:17 models.py:209 views.py:40
 msgid "roles"
-msgstr "funciones"
+msgstr "funções"
 
 #: __init__.py:18
 msgid "create new role"
-msgstr "crear nueva función"
+msgstr "criar nova função"
 
 #: __init__.py:19
 msgid "edit"
@@ -33,178 +33,176 @@ msgstr "editar"
 
 #: __init__.py:20
 msgid "members"
-msgstr "miembros"
+msgstr "membros"
 
 #: __init__.py:21
 msgid "role permissions"
-msgstr "permisos de la funcion"
+msgstr "permissões de função"
 
 #: __init__.py:22
 msgid "delete"
-msgstr "eliminar"
+msgstr "excluir"
 
 #: __init__.py:24
 msgid "grant"
-msgstr "otorgar"
+msgstr ""
 
 #: __init__.py:25
 msgid "revoke"
-msgstr "revocar"
+msgstr ""
 
 #: models.py:51
 msgid "Insufficient permissions."
-msgstr "Permisos insuficientes."
+msgstr "Permissões insuficientes."
 
 #: models.py:123 views.py:60
 msgid "namespace"
-msgstr "espacio de nombres"
+msgstr "namespace"
 
 #: models.py:124 views.py:61
 msgid "name"
-msgstr "nombre"
+msgstr "nome"
 
 #: models.py:131 models.py:187 views.py:152 views.py:215
 msgid "permission"
-msgstr "permiso"
+msgstr "permissão"
 
 #: models.py:132 views.py:57 views.py:154 views.py:217
 msgid "permissions"
-msgstr "permisos"
+msgstr "permissões"
 
 #: models.py:195
 msgid "permission holder"
-msgstr "titular de la autorización"
+msgstr "titular de permissão"
 
 #: models.py:196
 msgid "permission holders"
-msgstr "titulares de autorización"
+msgstr "titulares de permissões"
 
 #: models.py:204
 msgid "label"
-msgstr "etiqueta"
+msgstr "rótulo"
 
 #: models.py:208 models.py:239 views.py:76 views.py:93 views.py:117
 #: views.py:334
 msgid "role"
-msgstr "función"
+msgstr "função"
 
 #: models.py:255
 msgid "role member"
-msgstr "miembro de la función"
+msgstr "membro da função"
 
 #: models.py:256
 msgid "role members"
-msgstr "miembros de las functiones"
+msgstr "membros da função"
 
 #: permissions.py:7
 msgid "Permissions"
-msgstr "Permisos"
+msgstr "Permissões"
 
 #: permissions.py:9
 msgid "View roles"
-msgstr "Ver las funciones"
+msgstr "Ver funções"
 
 #: permissions.py:10
 msgid "Edit roles"
-msgstr "Modificar las funciones"
+msgstr "Editar funções"
 
 #: permissions.py:11
 msgid "Create roles"
-msgstr "Crear funciones"
+msgstr "Criar funções"
 
 #: permissions.py:12
 msgid "Delete roles"
-msgstr "Eliminar funciones"
+msgstr "Deletar funções"
 
 #: permissions.py:13
 msgid "Grant permissions"
-msgstr "Conceder permisos"
+msgstr "Conceder permissões"
 
 #: permissions.py:14
 msgid "Revoke permissions"
-msgstr "Revocar permisos"
+msgstr "Revogar as permissões"
 
 #: views.py:63
 msgid "has permission"
-msgstr "tiene permiso"
+msgstr ""
 
 #: views.py:149 views.py:212
 msgid " and "
-msgstr "y"
+msgstr ""
 
 #: views.py:149 views.py:212
 #, python-format
 msgid "%(permissions)s to %(requester)s"
-msgstr "%(permissions)s a %(requester)s"
+msgstr ""
 
 #: views.py:159
 #, python-format
 msgid "Permission \"%(permission)s\" granted to: %(requester)s."
-msgstr "Permiso \"%(permission)s\" otorgado a: %(requester)s."
+msgstr ""
 
 #: views.py:162
 #, python-format
 msgid "%(requester)s, already had the permission \"%(permission)s\" granted."
-msgstr "%(requester)s, ya tenía el permiso \"%(permission)s\" concedido."
+msgstr ""
 
 #: views.py:173
 #, python-format
 msgid ""
 "Are you sure you wish to grant the %(permissions_label)s %(title_suffix)s?"
 msgstr ""
-"¿Está seguro que desea otorgar el %(permissions_label)s %(title_suffix)s?"
 
 #: views.py:222
 #, python-format
 msgid "Permission \"%(permission)s\" revoked from: %(requester)s."
-msgstr "Permiso \"%(permission)s\" revocado de: %(requester)s."
+msgstr ""
 
 #: views.py:225
 #, python-format
 msgid "%(requester)s, doesn't have the permission \"%(permission)s\" granted."
-msgstr "%(requester)s, no tiene el permiso \"%(permission)s\" concedido."
+msgstr ""
 
 #: views.py:236
 #, python-format
 msgid ""
 "Are you sure you wish to revoke the %(permissions_label)s %(title_suffix)s?"
 msgstr ""
-"¿Estás seguro que quiere revocar el %(permissions_label)s %(title_suffix)s?"
 
 #: views.py:271 views.py:295
 msgid "Users"
-msgstr "Usuarios"
+msgstr ""
 
 #: views.py:274 views.py:298
 msgid "Groups"
-msgstr "Grupos"
+msgstr ""
 
 #: views.py:277 views.py:301
 msgid "Special"
-msgstr "Especial"
+msgstr ""
 
 #: views.py:330
 #, python-format
 msgid "non members of role: %s"
-msgstr "no miembros de la función: %s"
+msgstr "não membros da função: %s"
 
 #: views.py:331
 #, python-format
 msgid "members of role: %s"
-msgstr "miembros de la función: %s"
+msgstr "membros da função: %s"
 
 #: widgets.py:16
 msgid "Revoke"
-msgstr "Revocar"
+msgstr "Revogar"
 
 #: widgets.py:21
 msgid "Grant"
-msgstr "Otorgar"
+msgstr "Conceder"
 
 #: conf/settings.py:10
 msgid ""
 "A list of existing roles that are automatically assigned to newly created "
 "users"
 msgstr ""
-"Una lista de funciones existentes que se asignan automáticamente a los "
-"usuarios nuevos"
+"A lista de funções existentes que são automaticamente designados para "
+"usuários recém-criados"
